--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Click me to display Date and Time.</button>
 <p id="demo"></p>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
-<scritp type='text/javascript'>
+<script type='text/javascript'>
   var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1ljFdGRoQD-UrJz0lTWLMyI7A9X1lMa3ONe-LDs62pQM/edit?usp=sharing';
   
   function init(){
