--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Click me to display Date and Time.</button>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
 <script type='text/javascript'>
-  var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1ljFdGRoQD-UrJz0lTWLMyI7A9X1lMa3ONe-LDs62pQM/edit?usp=sharing';
+  var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1ljFdGRoQD-UrJz0lTWLMyI7A9X1lMa3ONe-LDs62pQM';
   
   function init(){
     Tabletop.init( { key: publicSpreadsheetUrl,
